--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "directories": {
     "lib" :       "./lib"
   },
+  "dependencies": {
+    "optimist":   ">=0.3.0"
+  },
   "main" :        "./lib/docco",
   "bin": {
     "docco":      "./bin/docco"
