--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "directories": {
     "lib" :       "./lib"
   },
+  "dependencies": {
+    "showdown"      : ">=0.0.1",
+    "commander"     : ">=0.5.2",
+    "coffee-script" : ">=1.0.0"
+  },
   "main" :        "./lib/docco",
   "bin": {
     "docco":      "./bin/docco"
