Added: commandline options, .iced, .ya?ml

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "main" :        "./lib/docco",
   "bin": {
     "docco":      "./bin/docco"
+  },
+  "dependencies": {
+    "optimist": ">= 0.3"
   }
 }
