Moved from 'highlight' to official 'highlight.js' module
'highlight.js' is actively maintained and has coffeescript support.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "commander"     : ">=0.5.2",
-    "highlight"     : "*"
+    "highlight.js"  : "*"
   },
   "main" :        "./lib/docco",
   "bin": {
