Add Travis-CI configuration file, and add "test" script to package.json for "npm test" support.

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "main" :        "./lib/docco",
   "bin": {
     "docco":      "./bin/docco"
+  },
+  "scripts" : {
+    "test":       "cake test"
   }
 }
