--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "lib" :       "./lib"
   },
   "dependencies": {
-    "commander": ">=0.5.2"
-  },
-  "devDependencies": {
-    "coffee-script": ">=1.3.3",
-    "rimraf"       :">=2.0.2"
+    "commander": ">= 0.5.2",
+    "marked":    ">= 0.2.7"
   },
   "main" :        "./lib/docco",
   "bin": {
