--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "node":       ">=0.2.0"
   },
   "dependencies": {
+    "async":      ">= 0.2.6",
     "commander":  ">= 0.5.2",
     "marked":     ">= 0.2.7",
+    "mkdirp":     ">= 0.3.5",
     "underscore": ">= 1.0.0",
+    "wrench":     ">= 1.4.4",
     "highlight.js": ">= 7.3.0"
   },
   "main" :        "./docco",
