--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "marked":     ">= 0.2.7",
     "fs-extra":   ">= 0.6.0",
     "underscore": ">= 1.0.0",
-    "highlight.js": ">= 7.3.0"
+    "highlight.js": "~7.3.0"
   },
   "main" :        "./docco",
   "bin": {
