--- a/package.json
+++ b/package.json
@@ -34,7 +34,15 @@
   },
   "devDependencies": {
     "chai": "^4.0.2",
+    "concurrent-transform": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-coffee": "^2.3.4",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-tap": "^1.0.1",
+    "gulp-util": "^3.0.8",
     "mocha": "^3.4.2",
-    "mockery": "^2.1.0"
+    "mockery": "^2.1.0",
+    "touch": "^3.1.0"
   }
 }
