--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "touch": "^3.1.0"
   },
   "scripts": {
+    "install": "npm run build",
     "test": "npm run test:unit",
     "test:unit": "jenkins-mocha test/unit-tests/*.js; jenkins-mocha --cobertura test/unit-tests/*.js",
     "build": "node_modules/gulp/bin/gulp.js build",
