--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commander": ">= 0.5.2",
     "fs-extra": "^3.0.1",
     "glob": "^7.1.2",
+    "handlebars": "^4.0.10",
     "highlight.js": ">= 8.0.x",
     "marked": ">= 0.2.7",
     "path": "^0.12.7",
