--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "coffeescript"
   ],
   "author": "Jeremy Ashkenas",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jashkenas/docco.git"
+    "url": "git+https://github.com/jashkenas/docco.git"
   },
   "engines": {
     "node": ">=0.2.0"
@@ -27,6 +27,6 @@
   },
   "main": "./docco",
   "bin": {
-    "docco": "./bin/docco"
+    "docco": "bin/docco"
   }
 }
